--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        header
+        new header
     </header>
     <div class="slider">
         <h1>slide one</h1>
@@ -15,7 +15,7 @@
         <h1>slide three</h1>
     </div>
     <footer>
-        all right all reserved
+        all right all reserved 2025
     </footer>
     <script src="./script.js"></script>
 </body>
